add: some tests
